--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-image-slider": "^1.1.5",
     "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
@@ -21,6 +22,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["./assets"]
+    "assets": [
+      "./assets"
+    ]
   }
 }
